[package]
name = "miti"
version = "0.1.0"
edition = "2021"
authors = ["Saimon Dahal <saimondahal66@gmail.com>"]
description = "A beautiful TUI calendar viewer with AD (Gregorian) and BS (Bikram Sambat) support"
license = "MIT"
repository = "https://github.com/saimon-dahal/miti"
keywords = ["calendar", "tui", "nepali", "bikram-sambat", "terminal"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"

[dependencies]
adtobs = "0.1.4"
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = "0.29.0"
ratatui = "0.29.0"
